--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Martz",
   "license": "MIT",
   "dependencies": {
+    "ace-builds": "^1.2.5",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "socket.io": "^1.5.1"
